use jpl instead of jul follow ide advices clean up